enums1/stdout.txt
Checking test execution result...
[!] Test execution result: FAILED
Checking source code format...
  Preparing source code for format check...
  Running format check...
// =====================================================
//  Running cargo fmt...
// =====================================================

// =====================================================
//    Running cargo clippy...
// =====================================================

    Checking format_check v0.1.0 (/home/runner/work/rustlings-luliqwerty/rustlings-luliqwerty/format_check)
error[E0599]: no variant or associated item named `Quit` found for enum `Message` in the current scope
  --> src/lib.rs:13:31
   |
8  | enum Message {
   | ------------ variant or associated item `Quit` not found for this enum
...
13 |     println!("{:?}", Message::Quit);
   |                               ^^^^ variant or associated item not found in `Message`

error[E0599]: no variant or associated item named `Echo` found for enum `Message` in the current scope
  --> src/lib.rs:14:31
   |
8  | enum Message {
   | ------------ variant or associated item `Echo` not found for this enum
...
14 |     println!("{:?}", Message::Echo);
   |                               ^^^^ variant or associated item not found in `Message`

error[E0599]: no variant or associated item named `Move` found for enum `Message` in the current scope
  --> src/lib.rs:15:31
   |
8  | enum Message {
   | ------------ variant or associated item `Move` not found for this enum
...
15 |     println!("{:?}", Message::Move);
   |                               ^^^^ variant or associated item not found in `Message`

error[E0599]: no variant or associated item named `ChangeColor` found for enum `Message` in the current scope
  --> src/lib.rs:16:31
   |
8  | enum Message {
   | ------------ variant or associated item `ChangeColor` not found for this enum
...
16 |     println!("{:?}", Message::ChangeColor);
   |                               ^^^^^^^^^^^ variant or associated item not found in `Message`

For more information about this error, try `rustc --explain E0599`.
error: could not compile `format_check` (lib) due to 4 previous errors

[!] Source code format check: FAILED
